deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/istio-1-11/istio-install/base/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefix
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ACME
spec:
  rules:
    - host: KFP_HOST_DEV
      http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - KFP_HOST_DEV
      secretName: kfp-tls-secret
