deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/istio-1-11/istio-install/base/istio-networking.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-allow-all
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
